--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1569,7 +1569,7 @@ ul.wmuSliderPagination {
 	.service-type-grd-right {
 		float: none;
 		width: 100%;
-		background: url(../img/7.jpg) no-repeat 0px 0px;
+		background: url(../img/fiximage.jpg) no-repeat 0px 0px;
 		background-size: cover;
 		-webkit-background-size: cover;
 		-moz-background-size: cover;
